--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 pygame = "^1.9"
 ansicolors = "^1.1"
+vector = "^0.0.0"
 
 [tool.poetry.dev-dependencies]
 
