--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "airplane-simulator"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Christian Thompson"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
