--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
+[build-system]
+build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
+
+[tool]
 [tool.poetry]
+authors = ["Christian Thompson"]
+description = ""
 name = "airplane-simulator"
 version = "0.1.0"
-description = ""
-authors = ["Christian Thompson"]
-
 [tool.poetry.dependencies]
-python = "^3.8"
-pygame = "^1.9"
 ansicolors = "^1.1"
+pygame = "^1.9"
+python = "^3.7"
 vector = "^0.0.0"
-
 [tool.poetry.dev-dependencies]
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
